<resources>
    <string name="activity_account">用户信息</string>
    <string name="activity_route_detail">路线详情</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="voice">语音</string>
    <string name="share">分享</string>
    <string name="collection">收藏</string>
    <string name="home_page">首页</string>
    <string name="device_management">设备管理</string>
    <string name="search_device">搜索设备</string>
    <string name="device_searching">正在搜索蓝牙设备…</string>
    <string name="search_device_prompt1">未发现蓝牙设备</string>
    <string name="search_device_prompt2">蓝牙设备搜索失败</string>
    <string name="search_device_prompt3">请检查您的设备是否开启或支持Ble服务</string>
    <string name="device_connecting">正在连接蓝牙设备…</string>
    <string name="general_setting">通用设置</string>
    <string name="device_detect">设备检测</string>
    <string name="light_left">左转灯</string>
    <string name="light_right">右转灯</string>
    <string name="light_open">全开</string>
    <string name="light_close">全关</string>
    <string name="read_device_name">读取设备名称</string>
    <string name="write_device_name">写入设备名称</string>
    <string name="dump_energy">剩余电量</string>
    <string name="clear_data">清除数据</string>
    <string name="break_link">断开连接</string>
    <string name="about_device">关于设备</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="head_portrait">头像</string>
    <string name="from_album">从相册选择</string>
    <string name="from_camera">从相机获取</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secrecy">保密</string>
    <string name="phone_number">手机号</string>
    <string name="height">身高</string>
    <string name="centimeter">厘米</string>
    <string name="weight">体重</string>
    <string name="kilograms">公斤</string>
    <string name="birthday">生日</string>
    <string name="password_management">密码管理</string>
    <string name="device_label">设备标签</string>
    <string name="use_help">使用帮助</string>
    <string name="feedback">意见反馈</string>
    <string name="version_update">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="navigation_demonstration">导航演示</string>
    <string name="navigation_simulation">模拟导航</string>
    <string name="navigation_gps">GPS导航</string>
    <string name="logout">退出登陆</string>
    <string name="prompt_title">提示</string>
    <string name="prompt_permission">请检查应用所需权限是否全部接受</string>
    <string name="see">查看</string>
    <string name="prompt_exit_application">确定退出应用?</string>
    <string name="prompt_exit_navigation">确定退出导航?</string>
    <string name="search">搜索</string>
    <string name="enter">确定</string>
    <string name="cancel">取消</string>
    <string name="nearby">附近</string>
    <string name="route">路线</string>
    <string name="start_point">请输入起点</string>
    <string name="pass_point">请输入途经点(选填)</string>
    <string name="end_point">请输入终点</string>
    <string name="my_location">我的位置</string>
    <string name="my_collection">我的收藏</string>
    <string name="location_prompt">正在获取地理信息,请稍后…</string>
    <string name="location_prompt1">定位失败</string>
    <string name="location_prompt2">城市编码获取失败</string>
    <string name="location_prompt3">经纬度获取失败</string>
    <string name="search_success">搜索询功</string>
    <string name="search_failed">搜索失败</string>
    <string name="search_prompt">输入条件有误</string>
    <string name="route_prompt1">起点/终点异常</string>
    <string name="route_prompt2">没有搜索到相关数据</string>
    <string name="route_prompt3">路线数据异常</string>
    <string name="route_detail">路线详情</string>
    <string name="start_off">出发</string>
    <string name="arrival">到达终点</string>
    <string name="tts_prompt">音频初始化失败</string>
    <string name="error_prompt">错误提示</string>
    <string name="error_prompt_path_plan1">网络超时或网络失败</string>
    <string name="error_prompt_path_plan2">终点错误</string>
    <string name="error_prompt_path_plan3">终点没有找到道路</string>
    <string name="error_prompt_path_plan4">起点没有找到道路</string>
    <string name="error_prompt_path_plan5">途径点没有找到道路</string>
    <string name="error_prompt_path_plan6">协议解析错误</string>
    <string name="error_prompt_path_plan7">起点错误</string>
    <string name="error_prompt_path_plan8">无权限访问此服务</string>
    <string name="error_prompt_path_plan9">请求参数非法</string>
    <string name="error_prompt_path_plan10">用户key非法或过期</string>
    <string name="error_prompt_path_plan11">请求超出配额</string>
    <string name="error_prompt_path_plan12">请求服务不存在</string>
    <string name="error_prompt_path_plan13">请求服务响应错误</string>
    <string name="error_prompt_path_plan14">路径计算成功</string>
    <string name="error_prompt_path_plan15">未知错误</string>

    <string name="app_name">智慧骑行</string>
    <string name="bluetooth_name">蓝牙设备名称:</string>
    <string name="bluetooth_electricity">蓝牙设备电量:</string>
    <string name="bluetooth_status">蓝牙连接状态:</string>
    <string name="bluetooth_status1">蓝牙已关闭</string>
    <string name="bluetooth_status1_1">蓝牙正在关闭</string>
    <string name="bluetooth_status2">蓝牙已开启</string>
    <string name="bluetooth_status2_1">蓝牙正在开启</string>
    <string name="bluetooth_status3">设备已断开连接</string>
    <string name="bluetooth_status3_1">设备正在断开连接</string>
    <string name="bluetooth_status4">设备已连接</string>
    <string name="bluetooth_status4_1">设备正在连接</string>
    <string name="bluetooth_status5">您的设备不支持蓝牙</string>
    <string name="bluetooth_status6">设备无法连接</string>
    <string name="bluetooth_status7">设备未连接</string>
    <string name="bluetooth_connection">连接蓝牙设备</string>
    <string name="bluetooth_disconnection">断开蓝牙设备</string>
    <string name="open_bluetooth">打开蓝牙</string>
    <string name="close_bluetooth">关闭蓝牙</string>
    <string name="next_step">下一步</string>
    <string name="start">起点：</string>
    <string name="end">终点：</string>
    <string name="navigation">导航</string>
    <string name="navigation_failed">导航失败</string>
    <string name="gps_prompt">请手动打开gps定位</string>
    <string name="path_condition_error">路线条件有误</string>
    <string name="path_calculation_error">路线计算有误</string>
    <string name="path_coordinate_error">路线坐标有误</string>
    <string name="path_plan_error">路线规划有误</string>
    <string name="path_draw_error">路线绘制有误</string>
    <string name="network_disconnect">请检查网络连接</string>
    <string name="network_type">您现在的网络类型是：</string>

</resources>
