<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/itemHomePage"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/home_page"/>
        <item
            android:id="@+id/itemDeviceManagement"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/device_management"/>
        <item
            android:id="@+id/itemMessage"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/message"/>
        <item
            android:id="@+id/itemSetting"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/setting"/>
    </group>
    
</menu>