<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yjt.app.ui.activity.RouteActivity">

    <include layout="@layout/toolbar_title"/>

    <RelativeLayout
        android:id="@+id/rlHeadPortrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/head_portrait"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_15"/>

        <com.yjt.app.ui.widget.CircleImageView
            android:id="@+id/civHeadPortrait"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:contentDescription="@null"
            app:border_color="@android:color/black"
            app:border_width="@dimen/dp_1"
            app:text_color="@android:color/black"
            app:text_padding="@dimen/dp_10"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_999999"/>

    <RelativeLayout
        android:id="@+id/rlNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/height"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_15"/>

        <TextView
            android:id="@+id/tvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_toLeftOf="@+id/ivForward1"
            android:layout_toStartOf="@+id/ivForward1"
            android:textColor="@color/gray_808080"
            android:textSize="@dimen/sp_15"/>

        <ImageView
            android:id="@+id/ivForward1"
            android:layout_width="@dimen/dp_14"
            android:layout_height="@dimen/dp_14"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:contentDescription="@null"
            android:src="@mipmap/icon_forward"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_999999"/>

    <RelativeLayout
        android:id="@+id/rlPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/phone_number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_15"/>

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:textColor="@color/gray_808080"
            android:textSize="@dimen/sp_15"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_999999"/>

    <RelativeLayout
        android:id="@+id/rlGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_15"/>

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_toLeftOf="@+id/ivForward3"
            android:layout_toStartOf="@+id/ivForward3"
            android:textColor="@color/gray_808080"
            android:textSize="@dimen/sp_15"/>

        <ImageView
            android:id="@+id/ivForward3"
            android:layout_width="@dimen/dp_14"
            android:layout_height="@dimen/dp_14"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:contentDescription="@null"
            android:src="@mipmap/icon_forward"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_999999"/>

    <RelativeLayout
        android:id="@+id/rlHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/nickname"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_15"/>

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_toLeftOf="@+id/ivForward4"
            android:layout_toStartOf="@+id/ivForward4"
            android:textColor="@color/gray_808080"
            android:textSize="@dimen/sp_15"/>

        <ImageView
            android:id="@+id/ivForward4"
            android:layout_width="@dimen/dp_14"
            android:layout_height="@dimen/dp_14"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:contentDescription="@null"
            android:src="@mipmap/icon_forward"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_999999"/>

    <RelativeLayout
        android:id="@+id/rlWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/weight"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_15"/>

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_toLeftOf="@+id/ivForward5"
            android:layout_toStartOf="@+id/ivForward5"
            android:textColor="@color/gray_808080"
            android:textSize="@dimen/sp_15"/>

        <ImageView
            android:id="@+id/ivForward5"
            android:layout_width="@dimen/dp_14"
            android:layout_height="@dimen/dp_14"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:contentDescription="@null"
            android:src="@mipmap/icon_forward"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_999999"/>

    <RelativeLayout
        android:id="@+id/rlBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/birthday"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_15"/>

        <TextView
            android:id="@+id/tvBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_toLeftOf="@+id/ivForward6"
            android:layout_toStartOf="@+id/ivForward6"
            android:textColor="@color/gray_808080"
            android:textSize="@dimen/sp_15"/>

        <ImageView
            android:id="@+id/ivForward6"
            android:layout_width="@dimen/dp_14"
            android:layout_height="@dimen/dp_14"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:contentDescription="@null"
            android:src="@mipmap/icon_forward"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_999999"/>
</LinearLayout>
