<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yjt.app.ui.activity.RouteActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp_10"
            android:contentDescription="@null"
            android:src="@mipmap/icon_back"/>

        <RelativeLayout
            android:id="@+id/rlSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ivBack"
            android:layout_toLeftOf="@+id/llSearch"
            android:layout_toRightOf="@+id/ivBack"
            android:layout_toStartOf="@+id/llSearch"
            android:background="@drawable/frame_fillet_gray_979797">

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dp_10"
                android:contentDescription="@null"
                android:src="@mipmap/icon_search"/>

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ivSearch"
                android:layout_toLeftOf="@+id/ivDelete"
                android:layout_toRightOf="@+id/ivSearch"
                android:layout_toStartOf="@+id/ivDelete"
                android:background="@null"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15"/>

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginStart="@dimen/dp_15"
                android:contentDescription="@null"
                android:src="@mipmap/icon_delete"
                android:visibility="gone"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@id/llSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp_5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivVoice"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dp_5"
                android:contentDescription="@null"
                android:src="@mipmap/icon_voice"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/selector_button1"
                android:clickable="true"
                android:padding="@dimen/dp_10"
                android:text="@string/enter"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_15"
                android:visibility="gone"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@color/gray_999999"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_999999"/>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button2"
        android:drawableLeft="@mipmap/dir1"
        android:drawablePadding="@dimen/dp_10"
        android:padding="@dimen/dp_15"
        android:text="@string/my_location"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_999999"/>

    <TextView
        android:id="@+id/tvCollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button2"
        android:drawableLeft="@mipmap/dir1"
        android:drawablePadding="@dimen/dp_10"
        android:padding="@dimen/dp_15"
        android:text="@string/my_collection"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/gray_999999"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvRecommendPosition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_10"
        android:fadeScrollbars="@null"
        android:scrollbars="none"/>
</LinearLayout>
